<resources>
    <string name="app_name">ArMovies</string>

    <string name="tab_movie">MOVIE</string>
    <string name="tab_tv_show">TV SHOW</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="tvshow_poster">TV Show Poster</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="success_add_to_favorite">Berhasil Menambahkan ke Daftar Favorit</string>
    <string name="success_remove_to_favorite">Berhasil Menghapus dari Daftar Favorit</string>
    <string name="there_is_an_error">Terjadi kesalahan</string>
    <string name="press_back_once_again_to_exit">Press back once again to exit</string>
    <string name="title">Title</string>
    <string name="production">Production</string>
    <string name="overview">Overview</string>
    <string name="release_date">Release Date : %s</string>
    <string name="first_on_air">First On Air : %s</string>
    <string name="poster">Poster</string>
    <string name="rating">Rating</string>
    <string name="go_to_favorite_page">Go to Favorite Page</string>
    <string name="my_favorites">My Favorites</string>
    <string name="no_item_message">Oopsss....\nData yang kamu cari tidak ada</string>
</resources>